# dissertation

./: leia-me.txt  principal.tex
1_Pre_Texto/: agradecimentos.tex  epigrafe.tex  fichacatalografica.tex  folhadeaprovacao1.tex  folhadeaprovacao2.tex  folhaderosto.tex  listadefinicoes.tex  listafiguras.tex  siglas.tex  simbolos.tex
2_Resumos/: abstract.tex  resumo.tex
3_Capitulos/: 1_introducao.tex  2_revisao.tex  2_revisao_teorica.tex  3_desenvolvimento.tex  4_conclusao.tex  4_resultados.tex  5_conclusao.tex  capitulo2.tex  capitulo4.tex  capitulo_1.tex  capitulo_2.tex  capitulo_3.tex  capitulo_4.tex  introducao.tex  rascunho.tex
4_Apendices/: a_arch_config.tex  apendice_a.tex  b_app_config.tex  c_arch_manifest.tex  d_app_manifest.tex  e_alliance.tex
6_Referencias/: bibliografia.bib
Configuracoes/: config.tex  info.tex
Figuras/2_revisao/: ros_conceitos_basicos.tex  taxonomia_mrta.tex
Figuras/3_desenvolvimento/: rqt_mrta_controller_uml.eps  rqt_mrta_model_uml.eps  rqt_mrta_uml.eps
Figuras/4_resultados/: rosgraph_3robots.eps
Figuras/apendice_a/: ascending_exponential_function.tex  ascending_linear_function.tex  ascending_pulse_function.tex  ascending_step_function.tex  decending_exponential_function.tex  decending_linear_function.tex  decending_pulse_function.tex  decending_step_function.tex
Figuras/capitulo_3/: grafico_motivacao.tex  graphes.tex  robot1-wander-motivation-new.csv  robot2-border-protection-motivation-new.csv  robot2-wander-motivation-new.csv  rosgraph_3robots.tex
Outros/Arquivos/d_app_manifest/: package.xml
(+23 files in other folders)
