<?xml version="1.0" encoding="UTF-8"?>
<package>
    <author email="adrianohrl@gmail.com">Adriano Henrique Rossette Leite</author>
    <buildtool_depend>catkin</buildtool_depend>
    <description>Esta aplicacao usa a arquitetura ALLIANCE para resolver o problema de alocacao de tarefa na patrulha realizada por varios robos no Campus da Universidade Federal de Itajuba.</description>
    <export>
        <rqt_mrta application="${prefix}/rqt_mrta.xml"/>
    </export>
    <license>BSD</license>
    <maintainer email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</maintainer>
    <name>patrulha</name>
    <run_depend>alliance</run_depend>
    <run_depend>alliance_test</run_depend>
    <run_depend>rqt_mrta</run_depend>
    <version>1.0.0</version>
</package>
